<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/settings_account">

        <Preference
            android:key="@string/settings_preference_username"
            android:selectable="false"
            android:summary="Janusz B"
            android:title="@string/settings_username" />

        <Preference
            android:key="@string/settings_preference_log_in"
            android:selectable="true"
            android:title="@string/settings_log_out" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_general">

        <ListPreference
            android:defaultValue="300"
            android:entries="@array/pref_distance_titles"
            android:entryValues="@array/pref_distance_values"
            android:key="@string/settings_preference_search_radius"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="300 km"
            android:title="@string/settings_search_radius" />

    </PreferenceCategory>

</PreferenceScreen>