<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_person_pin_circle_white_24dp"
        android:title="@string/main_nearby"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/main_favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/main_settings"
        app:showAsAction="always" />


</menu>